r5/firewall-router5.conf
# Generated by xtables-save v1.8.2 on Sun Jul 23 16:27:40 2023
*nat
:PREROUTING ACCEPT [9:1302]
:INPUT ACCEPT [2:356]
:POSTROUTING ACCEPT [1:48]
:OUTPUT ACCEPT [1:48]
:DOCKER_OUTPUT - [0:0]
:DOCKER_POSTROUTING - [0:0]
-A POSTROUTING -d 127.0.0.11/32 -j DOCKER_POSTROUTING
-A POSTROUTING -o eth1 -j MASQUERADE
-A OUTPUT -d 127.0.0.11/32 -j DOCKER_OUTPUT
-A DOCKER_OUTPUT -d 127.0.0.11/32 -p tcp -m tcp --dport 53 -j DNAT --to-destination 127.0.0.11:45293
-A DOCKER_OUTPUT -d 127.0.0.11/32 -p udp -m udp --dport 53 -j DNAT --to-destination 127.0.0.11:33604
-A DOCKER_POSTROUTING -s 127.0.0.11/32 -p tcp -m tcp --sport 45293 -j SNAT --to-source :53
-A DOCKER_POSTROUTING -s 127.0.0.11/32 -p udp -m udp --sport 33604 -j SNAT --to-source :53
COMMIT
# Completed on Sun Jul 23 16:27:40 2023
# Generated by xtables-save v1.8.2 on Sun Jul 23 16:27:40 2023
*filter
:INPUT DROP [3:704]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [736:50272]
-A INPUT -p ospf -j ACCEPT
-A FORWARD -i eth0 -o eth1 -m state --state NEW -j ACCEPT
-A FORWARD -m state --state ESTABLISHED -j ACCEPT
-A FORWARD -p ospf -j ACCEPT
COMMIT
# Completed on Sun Jul 23 16:27:40 2023
